5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1674_1100.log
== TEST (2019-04-25 10:55:33) 
-- CODE:
a=int(float());
print("Entrada: "a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leão-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- ERROR:
File "XXXX", line 2
    print("Entrada: "a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:53) 
-- CODE:
a=int(float());
print("Entrada: " a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leão-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- ERROR:
File "XXXX", line 2
    print("Entrada: " a)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:13) 
-- CODE:
a=int(float());
print("Entrada:" a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leão-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- ERROR:
File "XXXX", line 2
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:37) 
-- CODE:
a=int(input());
print("Entrada:" a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leão-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- ERROR:
File "XXXX", line 2
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:22) 
-- CODE:
a=int(input())
print("Entrada:" a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leão-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- ERROR:
File "XXXX", line 2
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:42) 
-- CODE:
a=int(input())
print("Entrada:" a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leão-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- ERROR:
File "XXXX", line 2
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:47) 
-- CODE:
a=int(input())
print("Entrada:",a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leao-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:00:05) 
-- CODE:
a=int(input())
print("Entrada:",a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leao-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- EXECUTION TIME:
0.205458
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:13) 
-- CODE:
a=int(input())
print("Entrada:",a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leao-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:49) 
-- CODE:
a=int(input())
print("Entrada:",a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garça");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leao-dourado");
	elif(a==50):
		print("Animal: Onça-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:01:25) 
-- CODE:
a=int(input())
print("Entrada:",a)
if(a==2 or a==5 or a==10 or a==10 or a==20 or  a==50 or a==100):
	if(a==2):
		print("Animal: Tartaruga");
	elif(a==5):
		print("Animal: Garca");
	elif(a==10):
		print("Animal: Arara");
	elif(a==20):
		print("Animal: Mico-leao-dourado");
	elif(a==50):
		print("Animal: Onca-pintada");
	elif(a==100):
		print("Animal: Garoupa");
else :
	print("Animal: Invalido")



-- EXECUTION TIME:
0.136342
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
